<?xml version="1.0" encoding="utf-8"?>

<!--
NIM     : 10116472
Nama    : Adhitya Kuncoro Jatti
Kelas   : IF-11 / AKB-11
Tanggal : 06-April-2019
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/whitetwo"
    tools:context=".Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <TextView
            android:id="@+id/idKodeKeluarga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/Login1"
            android:textColor="@color/Hitam"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/idDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idKodeKeluarga"
            android:layout_marginTop="8dp"
            android:text="@string/Login2"
            android:fontFamily="@font/rubik_regular"
            android:textColor="@color/Hitam"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/idEdtKodeKeluarga"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/idDesc"
            android:inputType="text"
            android:background="@drawable/edittext_rounded_corner"
            android:text="@string/LoginKode"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:fontFamily="@font/rubik_regular"/>

        <TextView
            android:id="@+id/idDescKetentuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idEdtKodeKeluarga"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="12sp"
            android:fontFamily="@font/rubik_regular"
            android:textColor="@color/Hitam" />

        <Button
            android:id="@+id/btnMasuk"
            android:layout_below="@+id/idDescKetentuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/tombol_gradient_rounded_corner"
            android:text="@string/Masuk"
            android:fontFamily="@font/nunito_bold"
            android:textAllCaps="false"
            android:textSize="18sp"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_weight="0.3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/kustom_border"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvBelumPunyKode"
            android:text="@string/Blmkode"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/rubik_regular"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btnBeliKode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvBelumPunyKode"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/tombol_2_gradient_rounded_corner"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/Beli"
            android:textAllCaps="false"
            android:textColor="@color/whitetree"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>